# steiner-tree-dp-vs-greedy

./: .gitignore  README.md  demo.py  pyproject.toml  reproduce.sh  requirements.txt
bench/: __init__.py  analyze.py  fetch_steinlib.py  quality.py  regression.py  run_experiments.py  timing.py
dashboard/: app.py
docs/: paper.tex  references.bib
steiner/: __init__.py  dreyfus_wagner.py  graph_utils.py  gsvi.py  mehlhorn.py  mst_heuristic.py  rsph.py
steiner/instances/: __init__.py  euclidean.py  geometric.py  pathological.py  random_er.py  steinlib.py
tests/: __init__.py  _helpers.py  test_bench.py  test_dashboard.py  test_gsvi.py  test_instances.py  test_mehlhorn.py  test_pathological_bound.py  test_rsph.py  test_sanity.py  test_viz.py
viz/: __init__.py  animate.py  draw_tree.py  heatmap.py  interactive.py
